--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -1,5 +1,5 @@
 # Use the example in Mayhem Docs as an example/starting point
-FROM rust:1.60-buster as rust-builder
+FROM rust:latest AS rust-builder
 RUN cargo install afl
 
 # Add the source code to the image and build the target
@@ -10,7 +10,7 @@ RUN cargo afl build
 
 # To simplify matters, we'll copy the compiled target as well as
 # the fuzz input folder to a new image with AFL. This helps save some space.
-FROM --platform=linux/amd64 rust:1.60-buster
+FROM --platform=linux/amd64 rust:latest
 RUN cargo install afl
 
 # Copy the compiled target and the input cases
